# stylus-hook

./: .env.example  Cargo.toml  README.md  foundry.toml  package-lock.json  package.json  tsconfig.json
operator/: README.md  config.ts  price_operator.ts  service_manager.ts
operator/types/: index.ts
script/: DeployLiquidityShield.s.sol
scripts/: deploy_stylus.js
src/: Counter.sol  OptimizedLiquidityProvisionHook.sol  PositionOptimizer.rs  PositionOracleServiceManager.sol  VolatilityCalculator.rs
src/test/: LiquidityShield.t.sol
test/: Counter.t.sol  MockCurve.sol
