[package]
name = "liquidity-shield"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.4.2"
wee_alloc = "0.4.5"
hex = "0.4.3"
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[workspace] 